2004-03-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Drawing fixes. A patch thanks to
	ed@catmur.co.uk (bug #135615). Also removed some redundant code.
	(gtk_minefield_multi_release): Fixed the long-standing "incorrect
	counts" bug (#103125), multi release wasn't checking whether the
	mines were shown or not.	
	(gtk_mine_draw): Solved a drawing problem where the cleared mines
	weren't being drawn if they were auto-cleared. The gorilla theme
	really higlighted this.
	(gtk_mine_draw): Add a warning to guard against a bug I suspect is
	still there.

2004-02-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_setup_numbers): Dynamically adjust
	the font size to take care of whatever scaling pango is using
	today. This is otherwise known as "an ugly hack".

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (about): translator_credits ->
	translator-credits.

2004-02-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Adjusted the hint sensitivity patch again: make it
	work in the fresh-game situation. It's not very helpful, but it
	does make sense.

2004-02-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Minor changes to Richard's patch. Future-proofing
	(centralising the location of the hint array offset) and reducing
	the textural size of the if statement so that it visually matches
	it's importance in the routine. All in all, less than this
	explanation.

2004-02-07  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c (focus_out_cb, resume_game_cb, show_face):
	Made the hint item insensitive when we're in "hide" mode, 
	when the game is over, and before a new game.

	* minefield.c (_setup_sign): Remove unused variable.
	(gtk_minefield_hint): Fixed hints in non-square minefields.

2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnome-gnomine.png: New graphic from Richard Hoelscher to fit in
	with the "nautical" theme we've decided on.
